# python-kidsclient

./: setup.cfg  setup.py
kidsclient/: __init__.py  client.py  exc.py  list.py  main.py  shell.py
kidsclient.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
kidsclient/common/: http.py  utils.py
kidsclient/openstack/common/: _i18n.py
kidsclient/v1/: client.py  shell.py
