[metadata]
name=python-kidsclient
summary = OpenStack Imitating Project API Client Library
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = https://github.com/tbbrave/python-kidsclient
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[files]
packages=kidsclient

[entry_points]
console_scripts=
    kids=kidsclient.shell:main

[global]
setup-hooks =
    pbr.hooks.setup_hook

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[wheel]
universal = 1

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = kidsclient/locale/kidsclient.pot

[compile_catalog]
directory = kidsclient/locale
domain = kidsclient

[update_catalog]
domain = kidsclient
output_dir = kidsclient/locale
input_file = kidsclient/locale/kidsclient.pot
